Change feature pod button width.

According to UX spec, the width of a feature pod button is 84 dip,
instead of 80 dip.

The spec says the width is 80dip but the label hover has horizontal
insets of -2dip.

UX spec: http://shortn/_TCL8k5SzY6

TEST=manual
BUG=854590

Change-Id: If024af5b0d79041fdedf1a8fdf696eac718eb875
Reviewed-on: https://chromium-review.googlesource.com/1111481
Reviewed-by: Yoshiki Iguchi <yoshiki@chromium.org>
Commit-Queue: Tetsui Ohkubo <tetsui@chromium.org>
Cr-Commit-Position: refs/heads/master@{#569548}
Former-commit-id: 118b4b5a44ab6295bbacb5753343a24282a4421f